# NucleoG474RE-BSP

./: .gitignore  Cargo.toml  LICENSE  openocd.cfg
examples/pac-hello-world/: Cargo.toml  build.rs  memory.x
examples/pac-hello-world/src/: main.rs
pac/: Cargo.toml  device.x
pac/src/: comp.rs  cordic.rs  fdcan.rs  lib.rs  lpuart1.rs  pwr.rs  rcc.rs  rtc.rs  sai.rs  tamp.rs  tim1.rs  tim15.rs  tim16.rs  usart1.rs  vrefbuf.rs
pac/src/adc1/: awd2cr.rs  awd3cr.rs  cfgr.rs  cr.rs  difsel.rs  isr.rs  jsqr.rs  ofr1.rs  ofr3.rs  tr3.rs
pac/src/adc12_common/: ccr.rs  csr.rs
pac/src/adc3/: calfact.rs  cfgr.rs  cfgr2.rs  cr.rs  dr.rs  gcomp.rs  ier.rs  ofr2.rs  ofr4.rs  smpr1.rs  smpr2.rs  sqr1.rs  tr1.rs  tr2.rs
pac/src/comp/: comp_c1csr.rs  comp_c2csr.rs  comp_c3csr.rs  comp_c4csr.rs  comp_c5csr.rs  comp_c6csr.rs  comp_c7csr.rs
pac/src/cordic/: csr.rs  rdata.rs  wdata.rs
pac/src/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
pac/src/crs/: cfgr.rs  cr.rs  icr.rs  isr.rs
pac/src/dac1/: dac_ccr.rs  dac_cr.rs  dac_dhr12l1.rs  dac_dhr12l2.rs  dac_dhr12ld.rs  dac_dhr12r1.rs  dac_dhr12r2.rs  dac_dhr12rd.rs  dac_dhr8r1.rs  dac_dhr8r2.rs  dac_dhr8rd.rs  dac_dor1.rs  dac_dor2.rs  dac_mcr.rs  dac_shhr.rs  dac_shrr.rs  dac_shsr1.rs  dac_shsr2.rs  dac_sr.rs  dac_stmodr.rs  dac_str1.rs  dac_str2.rs  dac_swtrgr.rs
pac/src/dbgmcu/: apb1h_fz.rs  apb1l_fz.rs  apb2_fz.rs  cr.rs  idcode.rs
pac/src/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  ccr8.rs  cmar1.rs  cmar2.rs  cmar3.rs  cmar4.rs  cmar5.rs  cmar6.rs  cmar7.rs  cmar8.rs  cndtr1.rs  cndtr2.rs  (+16 more)
(+652 files in other folders)
