[package]
name = "nucleo-g474-bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
codegen-units = 1
debug = true
lto = true
