[package]
name = "pac-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device", "set-sp"] }
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"

pac = { path = "../../pac" }

[features]
rt = ["cortex-m-rt/device"]

[profile.release]
codegen-units = 1
debug = true
lto = true

[profile.dev]
codegen-units = 1
debug = true
lto = true
